--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Daniel Zuzevich",
   "license": "MIT",
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "axios": "^0.21.1",
